<resources>
    <string name="app_name">微信人脸支付</string>
    <string name="title_activity_base">BaseActivity</string>


    <string name="title_result_product_amount">商品总价</string>
    <string name="title_result_discount">限时优惠</string>
    <string name="title_result_point">会员积分</string>
    <string name="title_result_bye">请领取小票，期待下次光临</string>
    <string name="title_result_main_page">回到首页</string>
    <string name="title_result_reprint">重打小票</string>
    <string name="title_pay_amount">支付金额</string>
    <string name="title_scan_pay_tips">请使用微信扫描以下二维码</string>
    <string name="title_scan_pay_tips2">请将二维码对准摄像头</string>
    <string name="title_activity_f8_main_settings">Settings</string>
    <string name="title_face_pay">刷脸支付</string>
    <string name="btn_rephoto">重拍</string>
    <string name="btn_qrpay_title">扫码支付</string>
    <string name="btn_union_pay_title">银联云闪付</string>
    <string name="title_sale_amount">消费金额</string>
    <string name="title_sale_amount_tips">请输入消费金额</string>
    <string name="title_confir_pay">确认支付</string>
    <string name="title_input_pin">可使用底座输入密码</string>
    <string name="tips_input_pin">请输入银行卡密码</string>
    <string name="tips_pay_succ">支付成功</string>
    <string name="tips_setting">设置</string>
    <string name="pre_net_setting">网络设置</string>
    <string name="pre_net_wifi">Wi-Fi网络</string>
    <string name="pre_net_4g">移动网络</string>
    <string name="pre_net_line">有线网络</string>
    <string name="pre_pay_setting">支付方式</string>
    <string name="pre_pay_self">用户自助支付</string>
    <string name="pre_pay_cashier">收银员启动支付</string>
    <string name="pre_pay_self_tips">摄像头自动识别二维码，用户也可以点击"刷脸支付"</string>
    <string name="pre_pay_cashier_tips">需要收银员点击键盘“收款”按键发起支付</string>
    <string name="title_pay_saler_tips">等待收银员发起收款</string>
    <string name="title_pay_saler_tips2">支持刷脸和扫码支付</string>
    <string name="title_wx_setting1">电子海报设置</string>
    <string name="title_wx_setting2">收银模式设置</string>
    <string name="title_wx_setting3">绑定账号</string>
    <string name="title_wx_select_type">选择使用方式</string>
    <string name="title_wx_setting4">系统设置</string>
    <string name="btn_title_reset">重置收银模式</string>
    <string name="title_back">返回</string>
    <string name="tips_wait_result">请等待收银员确认\n支付结果</string>
    <string name="title_app_setting">应用设置</string>
    <string name="yuan">¥</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
