<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/f8_bg_color"
    android:fitsSystemWindows="true"
    tools:context="com.android.landicorp.f8face.activity.ResultSuccActivity">

    <com.android.landicorp.f8face.view.F8ToolBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/toolbar"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@color/white"
        android:paddingTop="@dimen/margin_top_dp"
        android:paddingLeft="52dp"
        android:paddingRight="52dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_succ"
            android:src="@drawable/logo_medium"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_pay_succ"
            android:id="@+id/tv_pay_result"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/f8_btn_end_color"
            android:layout_below="@+id/iv_succ"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.01元"
            android:id="@+id/tv_pay_amount"
            android:layout_below="@+id/tv_pay_result"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/tv_line"
            android:layout_below="@+id/tv_pay_amount"
            android:background="@color/f8_edittext_line"
            android:layout_marginTop="28dp"
            />
        <TextView
            style="@style/activity_result_succ"
            android:layout_below="@+id/tv_line"
            android:layout_alignTop="@+id/tv_product_amount"
            android:text="@string/title_result_product_amount"
            />
        <TextView
            style="@style/activity_result_value_succ"
            android:id="@+id/tv_product_amount"
            android:layout_below="@+id/tv_line"
            android:layout_alignParentRight="true"
            android:text="0.01元"
            />

        <TextView
            style="@style/activity_result_succ"
            android:layout_below="@+id/tv_product_amount"
            android:layout_alignTop="@+id/tv_limit_discount"
            android:textColor="#FF9A27"
            android:text="@string/title_result_discount"
            />
        <TextView
            style="@style/activity_result_value_succ"
            android:id="@+id/tv_limit_discount"
            android:layout_below="@+id/tv_product_amount"
            android:textColor="#FF9A27"
            android:text="0.00元"
            />


        <TextView
            style="@style/activity_result_succ"
            android:layout_below="@+id/tv_limit_discount"
            android:layout_alignTop="@+id/tv_member_point"
            android:text="@string/title_result_point"
            />
        <TextView
            style="@style/activity_result_value_succ"
            android:id="@+id/tv_member_point"
            android:layout_below="@+id/tv_limit_discount"
            android:text="+0"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/tv_line2"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_member_point"
            android:background="@color/f8_edittext_line"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_result_bye"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_below="@+id/tv_line2"
            android:textColor="@color/f8_edittext_value"
            android:layout_marginTop="21dp"
            android:textSize="14sp"
            android:text="@string/title_result_bye"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/tv_line3"
            android:layout_marginTop="21dp"
            android:layout_below="@+id/tv_result_bye"
            android:background="@color/f8_edittext_line"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:orientation="horizontal"
            android:id="@+id/btn_main_page"
            android:text="@string/title_result_main_page"
            android:textColor="@color/f8_wx_green"
            android:background="@drawable/view_corner_wx_btn_all"
            android:layout_below="@+id/tv_line3"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_landi"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="提供技术支持"
                android:textSize="8sp"
                android:layout_marginTop="5dp"
                android:textColor="#888888"
                />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
