<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/f8_btn_end_color"
    tools:context="com.android.landicorp.f8face.activity.F8FacePayMainActivity">

    <com.youth.banner.Banner
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:orientation="vertical"
        android:id="@+id/ll_img_header"
        android:background="@drawable/img_f8_header_2"
        >
        <include layout="@layout/view_toolbar"
            android:id="@+id/toolbar"
            />
    </com.youth.banner.Banner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:elevation="@dimen/elevation_dp"
        android:background="@drawable/btn_color_shape"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:src="@drawable/ic_menu_facepay"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_face_pay"
            android:layout_marginLeft="25dp"
            android:textColor="@color/white"
            android:textSize="28sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="17dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ll_left_scan"
            android:layout_weight="1"
            android:orientation="vertical"
            android:elevation="@dimen/elevation_dp"
            android:background="@drawable/btn_scan_color_shape"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_qrpay"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_qrpay_title"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/ll_right_union"

            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:elevation="@dimen/elevation_dp"
            android:background="@drawable/btn_union_color_shape"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_quickpass"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_union_pay_title"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
